# rhine

./: .gitignore  .hlint.yaml  .travis.yml  AGENTS.md  CHEATSHEET.md  Contributing.md  LICENSE  NoteArrow.hs  README.md  cabal.9.4.4.project  cabal.project  cabal_check.sh  default.nix  flake.nix  rhine.cabal  shell.nix  stack.8.10.7.yaml  stack.8.8.4.yaml  stack.9.0.2.yaml  stack.9.2.4.yaml  stack.9.2.5.yaml  stack.9.2.8.yaml  stack.9.4.4.yaml  stack.9.4.7.yaml  stack.9.6.3.yaml  stack.9.6.4.yaml  stack.9.8.1.yaml  stack.9.8.2.yaml  stack.yaml  version1.md  versions.md
automaton/: CHANGELOG.md  README.md  automaton.cabal
automaton-lens/: CHANGELOG.md  automaton-lens.cabal
automaton-lens/src/Data/Automaton/: Lens.hs
automaton/examples/: ForeverSawtooth.hs  UserSawtooth.hs
automaton/src/Control/Monad/Trans/: List.hs
automaton/src/Data/: Automaton.hs  Stream.hs
automaton/src/Data/Automaton/: Filter.hs  Final.hs  Recursive.hs  Schedule.hs  Traversing.hs
automaton/src/Data/Automaton/Schedule/: Trans.hs
automaton/src/Data/Automaton/Trans/: Accum.hs  Changeset.hs  Except.hs  List.hs  Maybe.hs  RWS.hs  Random.hs  Reader.hs  State.hs  Writer.hs
automaton/src/Data/Automaton/Trans/Except/: Internal.hs
automaton/src/Data/Automaton/Trans/Writer/: CPS.hs
automaton/src/Data/Stream/: Except.hs  Filter.hs  Final.hs  Internal.hs  Optimized.hs  Recursive.hs  Result.hs
automaton/src/Data/Stream/Final/: Except.hs
automaton/src/Data/Stream/Recursive/: Except.hs
automaton/test/: Automaton.hs  Main.hs  Stream.hs
automaton/test/Automaton/: Except.hs  Filter.hs  Schedule.hs  Traversing.hs
automaton/test/Automaton/Trans/: Accum.hs  Changeset.hs  List.hs
automaton/test/Test/Control/Monad/Trans/: List.hs
monad-schedule/: CHANGELOG.md  README.md  fourmolu.yaml  monad-schedule.cabal
monad-schedule/src/Control/Monad/Schedule/: Class.hs  FreeAsync.hs  OSThreadPool.hs  RoundRobin.hs  Sequence.hs  Trans.hs  Yield.hs
monad-schedule/test/: FreeAsync.hs  Main.hs  Trans.hs  Yield.hs
rhine/: .travis.yml  ChangeLog.md  NotesGeneralization.hs  README.md  default.nix  dunai.nix  rhine.cabal  rhine.nix  rhine.release.nix  simple-affine-space.nix  stack.yaml
rhine-bayes/: ChangeLog.md  Notes.md  README.md  rhine-bayes.cabal  shell.nix
rhine-bayes/app/: FrequencyOutlier.hs  Lighthouse.hs  Main.hs
rhine-bayes/models/Model/: FrequencyOutlier.hs  Oscillator.hs
rhine-bayes/presentation/: default.nix  rhine-bayes.md
rhine-bayes/src/Data/Automaton/: Bayes.hs
rhine-bayes/src/Data/MonadicStreamFunction/: Bayes.hs  RandomMSF.hs
rhine-bayes/src/FRP/Rhine/: Bayes.hs
rhine-bayes/test/: Main.hs  Oscillator.hs
rhine-examples/: ChangeLog.md  README.md  default.nix  rhine-examples.cabal  rhine-examples.nix  rhine-examples.release.nix  stack.yaml
rhine-examples/src/: ADSR.hs  Accum.hs  Ball.hs  ConstraintTest.hs  CycleClock.hs  Demonstration.hs  EventClock.hs  HelloWorld.hs  InjectionClock.hs  Interpolation.hs  Periodic.hs  RandomWalk.hs  Sawtooth.hs  SpaceLeak.hs
rhine-gloss/: ChangeLog.md  Main.hs  README.md  default.nix  rhine-gloss.cabal  rhine-gloss.nix  rhine-gloss.release.nix  shell.nix  stack.yaml  stack_NixOS.yaml
rhine-gloss/src/FRP/Rhine/: Gloss.hs
rhine-gloss/src/FRP/Rhine/Gloss/: Common.hs  IO.hs  Internals.hs  Pure.hs
rhine-gloss/src/FRP/Rhine/Gloss/Pure/: Combined.hs
rhine-sdl2/: ChangeLog.md  Example2D.hs  README.md  rhine-sdl2.cabal  stack.yaml
rhine-sdl2/src/FRP/Rhine/: SDL.hs
rhine-terminal/: ChangeLog.md  LICENSE  Main.hs  README.md  Terminal.hs  TerminalRepl.hs  TerminalSimple.hs  rhine-terminal.cabal
rhine-terminal/src/FRP/Rhine/: FSNotify.hs  Terminal.hs
rhine-terminal/tests/: Main.hs
rhine-tree/: LICENSE  rhine-tree.cabal
rhine-tree-example/: CHANGELOG.md  rhine-tree-example.cabal
rhine-tree-example/app/: Dommy.hs  DommyGHC.hs
rhine-tree/app/: Dommy.hs  DommyGHC.hs  DommyWarp.hs
rhine-tree/nix/: default.nix
rhine-tree/src/: MyLib.hs  Types.hs
rhine-tree/src/FRP/Rhine/: Tree.hs
rhine-tree/src/FRP/Rhine/Tree/: App.hs  Types.hs
rhine-tree/static/: index.html
rhine/bench/: Main.hs  Mod.hs  Sum.hs  SumMultirate.hs  Test.hs  WordCount.hs
rhine/examples/: HelloWorld.hs
rhine/flags/livecoding/dunai/FRP/Rhine/: Scheduling.hs  StateConstraint.hs
rhine/flags/livecoding/essence-of-live-coding/FRP/ResamplingBuffer/: MSF.hs
rhine/inspection/: Main.hs
rhine/src/: GeneralLearning.hs
rhine/src/Control/Monad/: Event.hs  Schedule.hs
rhine/src/Control/Monad/Schedule/: Class.hs
rhine/src/Data/: Automaton.hs
rhine/src/Data/Automaton/: Except.hs  Final.hs  MSF.hs  Optimized.hs  Result.hs
rhine/src/Data/Automaton/Final/: Except.hs
rhine/src/Data/Automaton/MSF/: Trans.hs
rhine/src/Data/Automaton/MSF/Trans/: Except.hs  RWS.hs  (+5 more)
rhine/src/FRP/: Rhine.hs
rhine/src/FRP/Rhine/: ClSF.hs  Clock.hs  ClockTree.hs  Reactimation.hs  ResamplingBuffer.hs  SF.hs  SN.hs  SNGeneralization.hs  Schedule.hs  SyncSF.hs  TimeDomain.hs  Type.hs
rhine/src/FRP/Rhine/ClSF/: Core.hs  Except.hs  Random.hs  Reader.hs  State.hs  Upsample.hs  Util.hs
rhine/src/FRP/Rhine/Clock/: Catch.hs  Count.hs  Cycle.hs  Except.hs  File.hs  FixedRate.hs  FixedStep.hs  Periodic.hs  Proxy.hs  Rate.hs  Realtime.hs  Select.hs  Skip.hs  Step.hs  Trivial.hs  Unschedule.hs  Unyield.hs  Util.hs
rhine/src/FRP/Rhine/Reactimation/: ClockErasure.hs  Combinators.hs  Live.hs  Tick.hs
rhine/src/FRP/Rhine/ResamplingBuffer/: ClSF.hs  Collect.hs  FIFO.hs  Interpolation.hs  KeepLast.hs  LIFO.hs  MSF.hs  Timeless.hs  Util.hs
rhine/src/FRP/Rhine/Rhine/: Free.hs
rhine/src/FRP/Rhine/SF/: Combinators.hs
rhine/src/FRP/Rhine/SN/: Combinators.hs  Free.hs  Tick.hs  Type.hs
rhine/src/FRP/Rhine/Schedule/: Concurrently.hs  Internal.hs  Trans.hs  Util.hs
rhine/src/FRP/Rhine/SyncSF/: Core.hs  Except.hs  Reader.hs  Util.hs
rhine/test/: Clock.hs  Except.hs  Main.hs  Schedule.hs  Util.hs
rhine/test/Automaton/: MSF.hs
rhine/test/Clock/: Catch.hs  Except.hs  FixedStep.hs  Millisecond.hs
time-domain/: CHANGELOG.md  LICENSE  time-domain.cabal
time-domain/src/Data/: TimeDomain.hs
(+54 files in other folders)
