cabal-version:       2.2
name:                rhine-bayes
version:             1.2
synopsis:            monad-bayes backend for Rhine
description:
  This package provides a backend to the @monad-bayes@ library,
  enabling you to write stochastic processes as signal functions,
  and performing online machine learning on them.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
category:            FRP
build-type:          Simple
extra-doc-files:     README.md ChangeLog.md

source-repository head
  type:     git
  location: git@github.com:turion/rhine.git

source-repository this
  type:     git
  location: git@github.com:turion/rhine.git
  tag:      v1.1

common opts
  ghc-options:         -Wall
  build-depends:       base         >= 4.11 && < 4.18
                     , transformers >= 0.5
                     , rhine        == 1.2
                     , dunai        ^>= 0.11
                     , log-domain   >= 0.12
                     , monad-bayes  ^>= 1.2
  default-language:    Haskell2010
  default-extensions:
    Arrows
    DataKinds
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
  if flag(dev)
    ghc-options: -Werror

library
  import: opts
  exposed-modules:
    FRP.Rhine.Bayes
  other-modules:
    Data.MonadicStreamFunction.Bayes
  hs-source-dirs:      src

executable rhine-bayes-gloss
  import: opts
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       rhine-bayes
                     , rhine-gloss == 1.2
                     , mmorph

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True
