name: rhine-bayes
version: 1.4
synopsis: monad-bayes backend for Rhine
description:
  This package provides a backend to the @monad-bayes@ library,
  enabling you to write stochastic processes as signal functions,
  and performing online machine learning on them.

license: BSD3
license-file: LICENSE
author: Manuel Bärenz
maintainer: programming@manuelbaerenz.de
-- copyright:
category: FRP
build-type: Simple
extra-doc-files:
  ChangeLog.md
  README.md

cabal-version: 2.0

source-repository head
  type: git
  location: git@github.com:turion/rhine.git

source-repository this
  type: git
  location: git@github.com:turion/rhine.git
  tag: v1.4

library
  exposed-modules: FRP.Rhine.Bayes
  other-modules: Data.Automaton.Bayes
  build-depends:
    automaton,
    base >=4.14 && <4.20,
    log-domain >=0.12,
    mmorph ^>=1.2,
    monad-bayes ^>=1.3,
    rhine ==1.4,
    transformers >=0.5

  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    Arrows
    DataKinds
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators

  ghc-options: -W

  if flag(dev)
    ghc-options: -Werror

executable rhine-bayes-gloss
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    automaton,
    base >=4.14 && <4.20,
    log-domain,
    mmorph,
    monad-bayes,
    rhine,
    rhine-bayes,
    rhine-gloss ==1.4,
    time,
    transformers

  default-language: Haskell2010
  default-extensions:
    Arrows
    DataKinds
    FlexibleContexts
    NamedFieldPuns
    RankNTypes
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:
    -W
    -threaded
    -rtsopts
    -with-rtsopts=-N

  if flag(dev)
    ghc-options: -Werror

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True
