cabal-version: 2.2
name: rhine-bayes
version: 1.7
synopsis: monad-bayes backend for Rhine
description:
  This package provides a backend to the @monad-bayes@ library,
  enabling you to write stochastic processes as signal functions,
  and performing online machine learning on them.

license: BSD-3-Clause
license-file: LICENSE
author: Manuel Bärenz
maintainer: programming@manuelbaerenz.de
-- copyright:
category: FRP
build-type: Simple
extra-doc-files:
  ChangeLog.md
  README.md

source-repository head
  type: git
  location: git@github.com:turion/rhine.git

source-repository this
  type: git
  location: git@github.com:turion/rhine.git
  tag: v1.6

common opts
  build-depends:
    automaton,
    base >=4.16 && <4.22,
    log-domain >=0.12,
    mmorph ^>=1.2,
    monad-bayes ^>=1.3.0.5,
    rhine ^>=1.7,
    transformers >=0.5,

  default-extensions:
    Arrows
    DataKinds
    DeriveFunctor
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options: -W

  if flag(dev)
    ghc-options: -Werror
  default-language: Haskell2010

library
  import: opts
  exposed-modules: FRP.Rhine.Bayes
  other-modules: Data.Automaton.Bayes
  hs-source-dirs: src

executable rhine-bayes-gloss
  import: opts
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    rhine-bayes,
    rhine-gloss ^>=1.7,
    time,

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True
