cabal-version:       2.2
name:                rhine-examples
version:             1.2
synopsis:            Some simple example applications with rhine
description:         Diverse console example applications with rhine
                     that show some of the standard components.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
category:            FRP
build-type:          Simple
extra-doc-files:     ChangeLog.md

common opts
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base         >= 4.14 && < 4.18
                     , rhine        == 1.2
  default-language:    Haskell2010
  default-extensions:
     TypeOperators
  if flag(dev)
    ghc-options: -Werror

executable HelloWorld
  import: opts
  hs-source-dirs:      src
  main-is:             HelloWorld.hs

executable Demonstration
  import: opts
  hs-source-dirs:      src
  main-is:             Demonstration.hs

executable ADSR
  import: opts
  hs-source-dirs:      src
  main-is:             ADSR.hs

executable Ball
  import: opts
  hs-source-dirs:      src
  main-is:             Ball.hs
  build-depends: vector-sized >= 1.4
               , random       >= 1.1
  default-extensions:
    Arrows
    DataKinds
    RankNTypes
    TypeFamilies

executable Periodic
  import: opts
  hs-source-dirs:      src
  main-is:             Periodic.hs
  build-depends: transformers >= 0.5
               , monad-schedule >= 0.1

executable EventClock
  import: opts
  hs-source-dirs:      src
  main-is:             EventClock.hs
  build-depends: random       >= 1.1

executable Sawtooth
  import: opts
  hs-source-dirs:      src
  main-is:             Sawtooth.hs

executable RandomWalk
  import: opts
  hs-source-dirs:      src
  main-is:             RandomWalk.hs
  build-depends: random       >= 1.1
               , simple-affine-space

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True
