name: rhine-examples
version: 1.4
synopsis: Some simple example applications with rhine
description:
  Diverse console example applications with rhine
  that show some of the standard components.

license: BSD3
license-file: LICENSE
author: Manuel Bärenz
maintainer: programming@manuelbaerenz.de
-- copyright:
category: FRP
build-type: Simple
extra-doc-files: ChangeLog.md
cabal-version: 2.0

executable HelloWorld
  hs-source-dirs: src
  main-is: HelloWorld.hs
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <4.20,
    rhine ==1.4

  default-language: Haskell2010
  default-extensions: TypeOperators

  if flag(dev)
    ghc-options: -Werror

executable Demonstration
  hs-source-dirs: src
  main-is: Demonstration.hs
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <4.20,
    rhine ==1.4

  default-language: Haskell2010
  default-extensions: TypeOperators

  if flag(dev)
    ghc-options: -Werror

executable ADSR
  hs-source-dirs: src
  main-is: ADSR.hs
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <4.20,
    rhine ==1.4

  default-language: Haskell2010
  default-extensions: TypeOperators

  if flag(dev)
    ghc-options: -Werror

executable Ball
  hs-source-dirs: src
  main-is: Ball.hs
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <4.20,
    random >=1.1,
    rhine ==1.4

  default-language: Haskell2010
  default-extensions:
    Arrows
    DataKinds
    RankNTypes
    TypeFamilies
    TypeOperators

  if flag(dev)
    ghc-options: -Werror

executable Periodic
  hs-source-dirs: src
  main-is: Periodic.hs
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <4.20,
    monad-schedule >=0.1,
    rhine ==1.4,
    transformers >=0.5

  default-language: Haskell2010
  default-extensions: TypeOperators

  if flag(dev)
    ghc-options: -Werror

executable EventClock
  hs-source-dirs: src
  main-is: EventClock.hs
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <4.20,
    random >=1.1,
    rhine ==1.4

  default-language: Haskell2010
  default-extensions: TypeOperators

  if flag(dev)
    ghc-options: -Werror

executable Sawtooth
  hs-source-dirs: src
  main-is: Sawtooth.hs
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <4.20,
    rhine ==1.4

  default-language: Haskell2010
  default-extensions: TypeOperators

  if flag(dev)
    ghc-options: -Werror

executable RandomWalk
  hs-source-dirs: src
  main-is: RandomWalk.hs
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <4.20,
    random >=1.1,
    rhine ==1.4,
    simple-affine-space

  default-language: Haskell2010
  default-extensions:
    TypeOperators

  if flag(dev)
    ghc-options: -Werror

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True
