cabal-version: 2.2
name: rhine-examples
version: 1.6
synopsis: Some simple example applications with rhine
description:
  Diverse console example applications with rhine
  that show some of the standard components.

license: BSD-3-Clause
license-file: LICENSE
author: Manuel Bärenz
maintainer: programming@manuelbaerenz.de
-- copyright:
category: FRP
build-type: Simple
extra-doc-files: ChangeLog.md

common opts
  hs-source-dirs: src
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.16 && <4.22,
    monad-schedule ^>=1.6,
    random >=1.1,
    rhine ^>=1.6,
    simple-affine-space >=0.2,
    transformers >=0.5.6.2,

  default-language: Haskell2010
  default-extensions:
    Arrows
    DataKinds
    OverloadedStrings
    RankNTypes
    TypeFamilies
    TypeOperators

  if flag(dev)
    ghc-options: -Werror

executable HelloWorld
  import: opts
  main-is: HelloWorld.hs

executable Demonstration
  import: opts
  main-is: Demonstration.hs

executable ADSR
  import: opts
  main-is: ADSR.hs

executable Ball
  import: opts
  main-is: Ball.hs
  build-depends:
    random >=1.1

executable Periodic
  import: opts
  main-is: Periodic.hs
  build-depends:
    automaton,
    transformers >=0.5,

executable EventClock
  import: opts
  main-is: EventClock.hs
  build-depends:
    random >=1.1

executable Sawtooth
  import: opts
  main-is: Sawtooth.hs

executable RandomWalk
  import: opts
  main-is: RandomWalk.hs
  build-depends:
    random >=1.1,
    simple-affine-space,

executable Accum
  import: opts
  main-is: Accum.hs
  build-depends:
    text,
    transformers,

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True
