cabal-version:       2.2
name:                rhine-gloss
version:             1.2
synopsis:            Gloss backend for Rhine
description:
  This package provides a simple wrapper for the `gloss` library,
  or rather the function `Graphics.Gloss.play`,
  enabling you to write `gloss` applications as signal functions.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
category:            FRP
build-type:          Simple
extra-source-files:  ChangeLog.md
extra-doc-files:     README.md

source-repository head
  type:     git
  location: https://github.com/turion/rhine.git

source-repository this
  type:     git
  location: https://github.com/turion/rhine.git
  tag:      v1.1

common opts
  build-depends:       base         >= 4.14 && < 4.18
                     , transformers >= 0.5
                     , rhine        == 1.2
                     , dunai        ^>= 0.11
                     , gloss        >= 1.12
                     , mmorph       >= 1.1
                     , monad-schedule >= 0.1
                     , time         >= 1.8
  default-language:    Haskell2010
  default-extensions:
    TupleSections
    TypeOperators
  ghc-options: -Wall
  if flag(dev)
    ghc-options: -Werror

library
  import: opts
  exposed-modules:
    FRP.Rhine.Gloss
    FRP.Rhine.Gloss.Common
    FRP.Rhine.Gloss.IO
    FRP.Rhine.Gloss.Pure
    FRP.Rhine.Gloss.Pure.Combined
  hs-source-dirs:      src

executable rhine-gloss-gears
  import: opts
  main-is:             Main.hs
  build-depends:       rhine-gloss
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True
