name:                rhine-sdl2
version:             0.4.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
category:            FRP
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.18


library
  exposed-modules:
    FRP.Rhine.SDL
  -- other-modules:
  -- other-extensions:
  build-depends:       base         >= 4.7     && < 5
                     , rhine        == 0.4.*
                     , text         == 1.2.*
                     , transformers == 0.5.*
                     , sdl2         == 2.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010

executable AudioExample
  main-is:             AudioExample.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base         >= 4.7     && < 5
                     , rhine        == 0.4.*
                     , sdl2         == 2.3.*
                     , vector       == 0.12.*
  default-language:    Haskell2010

executable Example2D
  main-is:             Example2D.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base         >= 4.7     && < 5
                     , rhine        == 0.4.*
                     , sdl2         == 2.3.*
                     , rhine-sdl2
  default-language:    Haskell2010

executable SDLTest
  main-is:             SDLTest.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base         >= 4.7     && < 5
                     , sdl2         == 2.3.*
  default-language:    Haskell2010
