cabal-version:      3.0
name:               rhine-tree
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Manuel Bärenz
maintainer:         programming@manuelbaerenz.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        GADTs
        TypeFamilies
        Arrows
        ScopedTypeVariables
        OverloadedStrings

library
    import:           warnings
    exposed-modules:
        FRP.Rhine.Tree
        FRP.Rhine.Tree.Types
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16 && < 4.21
        , transformers
        , base-compat
        , sop-core
        , lens
        , text
        , automaton
        , rhine
        , these
        , semialign
        , jsaddle
        , time
    hs-source-dirs:   src

executable dommy
    import:           warnings
    build-depends:
        base,
        rhine,
        rhine-tree,
        jsaddle,
        text,
        lens
    ghc-options: -threaded
    hs-source-dirs: app
    main-is: Dommy.hs


-- Flag: set to True when building with the GHC WASM backend.
-- This disables dommy-warp (which depends on warp/TLS/crypton — unbuildable under WASM).
flag wasm
    description: Building with the GHC WASM backend
    default:     False
    manual:      True

-- Warp executable: build with normal GHC, serves the app at http://localhost:8080.
-- Disabled when building with the WASM backend (jsaddle-warp → warp → crypton → basement
-- cannot compile for WASM because basement's cbits has no WASI code path).
executable dommy-warp
    import:           warnings
    if flag(wasm)
        buildable: False
    build-depends:
        base,
        rhine-tree,
        jsaddle-warp
    ghc-options: -threaded
    hs-source-dirs: app
    main-is: DommyWarp.hs


test-suite rhine-tree-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        rhine-tree
